added to banner section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
         <div class="w-8 bg-[#13131899] h-1"></div>
       </div>
     </nav>
+
+    <!-- banner section start -->
+
+    <div class="text-center mt-14">
+      <img class="mx-auto" src="./images/banner.png" alt="">
+      <h1 class="mt-6 text-[28px] lg:text-[64px] text-[#212121] font-extrabold">A barn house of this design has a <br> striking appearance</h1>
+      <p class="text-[#494949] font-medium mt-6 leading-7">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+    </div>
+    <button style="background: rgba(171, 239, 95, 0.5);"
+    class="flex items-center gap-2 text-xl font-extrabold  px-5 py-3 rounded-[36px] mx-auto mt-8">View Details<span class="bg-[#ABEF5F] h-10 w-10 rounded-full items-center justify-center flex"><svg
+          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+        </svg>
+      </span></button>
   </header>
 </body>
 
