added to we design section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,53 @@
         </svg>
       </span></button>
   </header>
+
+ <!-- main section start -->
+
+ <main>
+    <!-- we desing section start -->
+
+    <section class="bg-[#f4f4f4] mt-28">
+      <div class="lg:w-8/12 w-10/12 mx-auto">
+        <div class="flex lg:flex-row flex-col items-center justify-between relative pt-24">
+          <!-- text content -->
+         <div>
+          <img class="absolute top-10 -left-14 lg:flex hidden" src="./images/Vector.png" alt="">
+          <button class="flex items-center gap-2 py-2 px-4 bg-white font-bold rounded-3xl lg:mx-0 mx-auto"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+          </svg> <span>About Us</span>
+          </button>
+          <h1 class="text-[40px] font-bold text-[#212121] mt-6 lg:text-left text-center">We design thoughtful, <br> liveable spaces</h1>
+          <p class="font-medium text-[#494949] mt-6 leading-7 lg:text-left text-center">The barn house captivates with its blend of rustic charm and <br>
+            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="flex items-center bg-white py-6 px-6 rounded-2xl gap-6 mt-6">
+              <div>
+                <img src="./images/commercial.png" alt="">
+              </div>
+              <div>
+                <h3 class="text-xl font-extrabold">Commercial</h3>
+                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+              </div>
+            </div>
+            <div class="flex items-center bg-white py-6 px-6 rounded-2xl gap-6 mt-6">
+              <div>
+                <img src="./images/residential.png" alt="">
+              </div>
+              <div>
+                <h3 class="text-xl font-extrabold">Residential</h3>
+                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+              </div>
+            </div>
+         </div>
+         <!-- images content -->
+          <div class="lg:mt-0 mt-6">
+            <img src="./images/Rectangle.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+ </main>
+
 </body>
 
 </html>
