added to commercial section dekstop size and small device

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     rel="stylesheet">
   <!-- font awesome cdn link  -->
   <script src="https://kit.fontawesome.com/caf423a0ab.js" crossorigin="anonymous"></script>
+  <!-- raw css link -->
+   <link rel="stylesheet" href="css/style.css">
   <title>Rinterio</title>
   <style>
     .manrope {
@@ -84,43 +86,52 @@
 
     <div class="text-center mt-14">
       <img class="mx-auto" src="./images/banner.png" alt="">
-      <h1 class="mt-6 text-[28px] lg:text-[64px] text-[#212121] font-extrabold">A barn house of this design has a <br> striking appearance</h1>
-      <p class="text-[#494949] font-medium mt-6 leading-7">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+      <h1 class="mt-6 text-[28px] lg:text-[64px] text-[#212121] font-extrabold">A barn house of this design has a <br>
+        striking appearance</h1>
+      <p class="text-[#494949] font-medium mt-6 leading-7">The barn house captivates with its blend of rustic charm and
+        modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the
+        space with natural light.</p>
     </div>
     <button style="background: rgba(171, 239, 95, 0.5);"
-    class="flex items-center gap-2 text-xl font-extrabold  px-5 py-3 rounded-[36px] mx-auto mt-8">View Details<span class="bg-[#ABEF5F] h-10 w-10 rounded-full items-center justify-center flex"><svg
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-          stroke="currentColor" class="size-6">
+      class="flex items-center gap-2 text-xl font-extrabold  px-5 py-3 rounded-[36px] mx-auto mt-8">View Details<span
+        class="bg-[#ABEF5F] h-10 w-10 rounded-full items-center justify-center flex"><svg
+          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
         </svg>
       </span></button>
   </header>
 
- <!-- main section start -->
+  <!-- main section start -->
 
- <main>
+  <main>
     <!-- we desing section start -->
 
     <section class="bg-[#f4f4f4] mt-28">
       <div class="lg:w-8/12 w-10/12 mx-auto">
         <div class="flex lg:flex-row flex-col items-center justify-between relative pt-24">
           <!-- text content -->
-         <div>
-          <img class="absolute top-10 -left-14 lg:flex hidden" src="./images/Vector.png" alt="">
-          <button class="flex items-center gap-2 py-2 px-4 bg-white font-bold rounded-3xl lg:mx-0 mx-auto"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
-          </svg> <span>About Us</span>
-          </button>
-          <h1 class="text-[40px] font-bold text-[#212121] mt-6 lg:text-left text-center">We design thoughtful, <br> liveable spaces</h1>
-          <p class="font-medium text-[#494949] mt-6 leading-7 lg:text-left text-center">The barn house captivates with its blend of rustic charm and <br>
-            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <div>
+            <img class="absolute top-10 -left-14 lg:flex hidden" src="./images/Vector.png" alt="">
+            <button class="flex items-center gap-2 py-2 px-4 bg-white font-bold rounded-3xl lg:mx-0 mx-auto"><svg
+                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+              </svg> <span>About Us</span>
+            </button>
+            <h1 class="text-[40px] font-bold text-[#212121] mt-6 lg:text-left text-center">We design thoughtful, <br>
+              liveable spaces</h1>
+            <p class="font-medium text-[#494949] mt-6 leading-7 lg:text-left text-center">The barn house captivates with
+              its blend of rustic charm and <br>
+              modern sophistication, featuring weathered wood, sleek metal accents.</p>
             <div class="flex items-center bg-white py-6 px-6 rounded-2xl gap-6 mt-6">
               <div>
                 <img src="./images/commercial.png" alt="">
               </div>
               <div>
                 <h3 class="text-xl font-extrabold">Commercial</h3>
-                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br>
+                  of rustic charm and modern.</p>
               </div>
             </div>
             <div class="flex items-center bg-white py-6 px-6 rounded-2xl gap-6 mt-6">
@@ -129,18 +140,172 @@
               </div>
               <div>
                 <h3 class="text-xl font-extrabold">Residential</h3>
-                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                <p class="text-[#737373] font-medium leading-7 mt-[10px]">The barn house captivates with its blend <br>
+                  of rustic charm and modern.</p>
               </div>
             </div>
-         </div>
-         <!-- images content -->
+          </div>
+          <!-- images content -->
           <div class="lg:mt-0 mt-6">
             <img src="./images/Rectangle.png" alt="">
           </div>
         </div>
       </div>
+
+      <!-- counter section start -->
+
+      <section class="mt-24">
+        <div class="lg:w-8/12 w-10/12 mx-auto">
+          <div class="bg-white rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="text-center p-14">
+              <img class="mx-auto" src="./icons/happy.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
+              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+            </div>
+            <div class="text-center p-14">
+              <img class="mx-auto" src="./icons/happy.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
+              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+            </div>
+            <div class="text-center p-14">
+              <img class="mx-auto" src="./icons/happy.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
+              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+            </div>
+            <div class="text-center p-14">
+              <img class="mx-auto" src="./icons/happy.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
+              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- our work process section start -->
+
+      <section class="lg:w-8/12 w-10/12 mx-auto mt-28">
+        <div class="text-center">
+          <button class="flex items-center gap-2 py-2 px-4 bg-white font-bold rounded-3xl mx-auto"><svg
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+            </svg> <span>How we works</span></button>
+          <h1 class="text-[40px] font-bold mt-4">Our Works Process</h1>
+          <p class="font-medium leading-7 mt-6 text-[#494949]">The barn house captivates with its blend of rustic charm
+            and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          </button>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 pb-24">
+          <div class="bg-[#E7C1D3] p-6 rounded-2xl">
+            <img src="./images/concept.png" alt="">
+            <p class="text-xl font-extrabold text-[#1C1C1C] mt-[10px]">Concept</p>
+            <p class="font-medium leading-7 mt-[10px] text-[#494949]">The barn house captivates <br> with its blend of
+              rustic charm <br> and modern.</p>
+          </div>
+          <div class="bg-[#EFDA6E] p-6 rounded-2xl">
+            <img src="./images/flow-chart.png" alt="">
+            <p class="text-xl font-extrabold text-[#1C1C1C] mt-[10px]">Design Process</p>
+            <p class="font-medium leading-7 mt-[10px] text-[#494949]">The barn house captivates <br> with its blend of
+              rustic charm <br> and modern.</p>
+          </div>
+          <div class="bg-[#A4DAC3] p-6 rounded-2xl">
+            <img src="./images/vision.png" alt="">
+            <p class="text-xl font-extrabold text-[#1C1C1C] mt-[10px]">Supervision</p>
+            <p class="font-medium leading-7 mt-[10px] text-[#494949]">The barn house captivates <br> with its blend of
+              rustic charm <br> and modern.</p>
+          </div>
+          <div class="bg-[#77AAEA] p-6 rounded-2xl">
+            <img src="./images/budget-planning.png" alt="">
+            <p class="text-xl font-extrabold text-[#1C1C1C] mt-[10px]">Budget Planning</p>
+            <p class="font-medium leading-7 mt-[10px] text-[#494949]">The barn house captivates <br> with its blend of
+              rustic charm <br> and modern.</p>
+          </div>
+        </div>
+      </section>
+
     </section>
- </main>
+
+    <!-- our latest portfolio section start -->
+
+    <section class=" lg:bg-white bg-[#f4f4f4] lg:mt-24 pt-24">
+      <div class="lg:w-8/12 w-10/12 mx-auto">
+        <div class="text-center">
+          <button
+            class="flex items-center gap-2 py-2 px-4 bg-[#ABEF5F33] text-[#494949] font-bold rounded-3xl mx-auto"><svg
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+              class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+            </svg> <span>How we works</span></button>
+          <h1 class="text-[40px] font-bold mt-4">Our Latest Portfolio</h1>
+          <p class="font-medium leading-7 mt-6 text-[#494949]">The barn house captivates with its blend of rustic charm
+            and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          </button>
+        </div>
+          <!-- row 1 start -->
+           <div class="grid grid-cols-1 lg:grid-cols-3 gap-7 mt-8">
+            <div class="col-span-2 bg-white rounded-2xl">
+              <div class="flex lg:flex-row flex-col gap-5 border border-[#E9E9E9] p-6 rounded-2xl items-center">
+                <!-- images content -->
+                <div class="w-full lg:w-auto">
+                  <img class="w-full lg:w-auto object-cover" src="./images/img1.png" alt="">
+                </div>
+                <!-- text content -->
+                <div>
+                  <h3 class="text-2xl font-extrabold text-[#494949]">Commercial</h3>
+                  <p class="mt-4 font-medium text-[#737373]">The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates
+                    with
+                    its blend of <br> rustic charm and modern .</p>
+                  <button class="flex items-center gap-2 text-xl font-extrabold rounded-[36px] mt-5">View
+                    Details<span class="bg-[#ABEF5F] h-10 w-10 rounded-full items-center justify-center flex"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                      </svg>
+                    </span></button>
+                </div>
+              </div>
+            </div>
+            <div class="bg-white border border-[#E9E9E9] p-6 w-full lg:w-[375px] rounded-2xl">
+              <img class="w-full" src="./images/img2.png" alt="">
+            </div>
+           </div>
+          <!-- row 1 end -->
+          
+          <!-- row 2 start -->
+           <div  class="grid grid-cols-1 lg:grid-cols-4 gap-7 mt-6">
+            <div class="bg-white lg:col-span-1 w-full  mx-auto lg:mx-0 border border-[#E9E9E9] p-6 lg:w-[275px] rounded-2xl">
+              <img class="w-full bg-cover" src="./images/img3.png" alt="">
+            </div>
+            <div class="col-span-2 bg-white rounded-2xl">
+              <div class="flex lg:flex-row flex-col gap-5 border border-[#E9E9E9] p-6 rounded-2xl items-center">
+                <!-- images content -->
+                <div class="w-full">
+                  <img class="w-full" src="./images/img4.png" alt="">
+                </div>
+                <!-- text content -->
+                <div>
+                  <h3 class="text-2xl font-extrabold text-[#494949]">Commercial</h3>
+                  <p class="mt-4 font-medium text-[#737373]">TThe barn house captivates with its blend of rustic charm and modern. </p>
+                  <button class="flex items-center gap-2 text-xl font-extrabold rounded-[36px] mt-5">View
+                    Details<span class="bg-[#ABEF5F] h-10 w-10 rounded-full items-center justify-center flex"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                      </svg>
+                    </span></button>
+                </div>
+              </div>
+            </div>
+            <div class="col-span-1 w-full border bg-white border-[#E9E9E9] p-6 lg:w-[275px] rounded-2xl">
+              <img class="w-full" src="./images/img5.png" alt="">
+            </div>
+           </div>
+          <!-- row 2 end -->
+      </div>
+    </section>
+
+
+  </main>
 
 </body>
 
