added to lets discuss next project

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
     <!-- footer section start -->
 
-    <section class="bg-[#1C1C1C] mt-2">
+    <section class="bg-[#1C1C1C] mt-2 pt-24">
       <div class="lg:w-8/12 w-10/12 mx-auto">
         <div class="flex items-center gap-4 justify-center">
           <div class="bg-[#ABEF5F] h-10 w-10 rounded-full flex items-center justify-center">
@@ -498,23 +498,25 @@
           </div>
           <h3 class="text-4xl font-extrabold text-white">Rinterio</h3>
         </div>
-        <p class="font-medium leading-7 mt-6 text-[#494949] text-center">The barn house captivates with its blend of rustic charm
+        <p class="font-medium leading-7 mt-6 text-[#737373] text-center">The barn house captivates with its blend of rustic charm
           and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
       
-      <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 mx-auto">
+      <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 text-[#E9E9E9] mt-12 mx-auto">
         <p>Home</p>
         <p>Services</p>
         <p>Portfolio</p>
         <p>Blogs</p>
         <p>Contact Us</p>
       </div>
-      <button class="flex items-center gap-2 text-xl font-extrabold bg-[#ABEF5F] text-[#1C1C1C] px-5 py-3 rounded-[36px] mx-auto">Book
-        Consult <span class="bg-[#1C1C1C] text-white h-10 w-10 rounded-full items-center justify-center flex"><svg
-            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-          </svg>
-        </span></button>
+      <div class="pb-24">
+        <button class="flex items-center gap-2 text-xl font-extrabold bg-[#ABEF5F] text-[#1C1C1C] px-5 py-3 rounded-[36px] mx-auto mt-12">Book
+          Consult <span class="bg-[#1C1C1C] text-white h-10 w-10 rounded-full items-center justify-center flex"><svg
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+          </span></button>
+      </div>
     </div>
     </section>
 
