addedt to footer section

--- a/index.html
+++ b/index.html
@@ -461,26 +461,29 @@
           <div class="flex lg:flex-row flex-col items-center">
             <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto" type="text" name="" id=""
               placeholder="First Name*">
-            <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto lg:mt-0 mt-5" type="text" name="" id=""
-              placeholder="First Name*">
+            <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto lg:mt-0 mt-5" type="text" name=""
+              id="" placeholder="First Name*">
           </div>
           <div class="flex lg:flex-row flex-col items-center mt-6">
             <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto " type="text" name="" id=""
               placeholder="Phone Number*">
-            <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto lg:mt-0 mt-5" type="text" name="" id=""
-              placeholder="Email Number*">
+            <input class="py-[21px] px-[20px] lg:w-5/12 w-full rounded-[64px] mx-auto lg:mt-0 mt-5" type="text" name=""
+              id="" placeholder="Email Number*">
           </div>
           <div class="mt-6 flex justify-center">
-            <textarea placeholder="Write your message here" class="textarea textarea-bordered textarea-lg lg:w-10/12 w-full rounded-[32px] h-[240px]">
+            <textarea placeholder="Write your message here"
+              class="textarea textarea-bordered textarea-lg lg:w-10/12 w-full rounded-[32px] h-[240px]">
             </textarea>
           </div>
-          <div class="w-full mt-8">
-            <button class="flex items-center justify-center gap-2 text-xl font-extrabold bg-[#ABEF5F] px-5 py-3 w-10/12 mx-auto rounded-[32px]">Send Mail<span class="bg-[#1C1C1C] text-white h-8 w-8 rounded-full items-center justify-center flex"><svg
-              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-            </svg>
-          </span></button>
+          <div class="w-full mt-8 pb-24">
+            <button
+              class="flex items-center justify-center gap-2 text-xl font-extrabold bg-[#ABEF5F] px-5 py-3 w-10/12 mx-auto rounded-[32px]">Send
+              Mail<span class="bg-[#1C1C1C] text-white h-8 w-8 rounded-full items-center justify-center flex"><svg
+                  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+              </span></button>
           </div>
         </div>
     </section>
@@ -498,26 +501,28 @@
           </div>
           <h3 class="text-4xl font-extrabold text-white">Rinterio</h3>
         </div>
-        <p class="font-medium leading-7 mt-6 text-[#737373] text-center">The barn house captivates with its blend of rustic charm
+        <p class="font-medium leading-7 mt-6 text-[#737373] text-center">The barn house captivates with its blend of
+          rustic charm
           and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
-      
-      <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 text-[#E9E9E9] mt-12 mx-auto">
-        <p>Home</p>
-        <p>Services</p>
-        <p>Portfolio</p>
-        <p>Blogs</p>
-        <p>Contact Us</p>
+
+        <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 text-[#E9E9E9] mt-12 mx-auto">
+          <p>Home</p>
+          <p>Services</p>
+          <p>Portfolio</p>
+          <p>Blogs</p>
+          <p>Contact Us</p>
+        </div>
+        <div class="pb-24">
+          <button
+            class="flex items-center gap-2 text-xl font-extrabold bg-[#ABEF5F] text-[#1C1C1C] px-5 py-3 rounded-[36px] mx-auto mt-12">Book
+            Consult <span class="bg-[#1C1C1C] text-white h-10 w-10 rounded-full items-center justify-center flex"><svg
+                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+              </svg>
+            </span></button>
+        </div>
       </div>
-      <div class="pb-24">
-        <button class="flex items-center gap-2 text-xl font-extrabold bg-[#ABEF5F] text-[#1C1C1C] px-5 py-3 rounded-[36px] mx-auto mt-12">Book
-          Consult <span class="bg-[#1C1C1C] text-white h-10 w-10 rounded-full items-center justify-center flex"><svg
-              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-            </svg>
-          </span></button>
-      </div>
-    </div>
     </section>
 
   </main>
