added to last recheck

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- tailwind css cdn link -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- nothing you could do font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Manrope:wght@200..800&family=Nothing+You+Could+Do&display=swap"
+    rel="stylesheet">
   <!-- manrope font by google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +29,9 @@
   <style>
     .manrope {
       font-family: "Manrope", serif;
+    }
+    .nothing{
+      font-family: "Nothing You Could Do", cursive;
     }
   </style>
   <!-- custom style -->
@@ -43,7 +52,8 @@
 
   <!-- header section start -->
 
-  <header class="lg:w-8/12 w-10/12 mx-auto">
+  <header style="background: linear-gradient(0.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);"
+    class="lg:w-8/12 w-10/12 mx-auto">
 
     <!-- navbar section start -->
 
@@ -163,19 +173,19 @@
               <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
             </div>
             <div class="text-center p-14">
-              <img class="mx-auto" src="./icons/happy.png" alt="">
-              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
-              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+              <img class="mx-auto" src="./icons/department.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">50+</h1>
+              <p class="font-medium text-[#737373] mt-1">Work Departments</p>
             </div>
             <div class="text-center p-14">
-              <img class="mx-auto" src="./icons/happy.png" alt="">
-              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
-              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+              <img class="mx-auto" src="./icons/mens.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">30k+</h1>
+              <p class="font-medium text-[#737373] mt-1">Our Happy Client</p>
             </div>
             <div class="text-center p-14">
-              <img class="mx-auto" src="./icons/happy.png" alt="">
-              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">235+</h1>
-              <p class="font-medium text-[#737373] mt-1">Happy Client Review</p>
+              <img class="mx-auto" src="./icons/men.png" alt="">
+              <h1 class="text-[40px] font-extrabold mt-4 text-[#494949]">307+</h1>
+              <p class="font-medium text-[#737373] mt-1">Staff Members</p>
             </div>
           </div>
         </div>
@@ -304,6 +314,94 @@
           </div>
         </div>
         <!-- row 2 end -->
+      </div>
+    </section>
+
+    <!-- profession portfoli section start -->
+
+    <section class="bg-[#f4f4f4] mt-24 pt-24">
+      <div class="lg:w-8/12 w-10/12 mx-auto">
+        <div class="text-center">
+          <h1 class="text-[40px] font-bold text-[#212121]">Professionally Designed <br>
+            Websites to get you started</h1>
+            <p class="nothing font-extrabold text-[40px] mt-6">Fully functional demo website to get you started.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-5 items-center mt-16 lg:space-y-0 space-y-8">
+          <div class="mx-auto">
+            <div class=" bg-white py-9 w-52 rounded-2xl"><img class="h-14 w-14 mx-auto" src="./icons/theme.png" alt=""></div>
+            <p class="pl-10 mt-5 font-bold text-[18px]">1. Install Theme</p>
+          </div>
+          <div class="lg:flex hidden">
+            <img src="./icons/arrow-v3.png" alt="">
+          </div>
+          <div class="mx-auto">
+            <div class=" bg-white py-9 w-52 rounded-2xl"><img class="h-14 w-14 mx-auto" src="./icons/demo.png" alt=""></div>
+            <p class="pl-10 mt-5 font-bold text-[18px]">2. Select a Demo</p>
+          </div>
+          <div class="lg:flex hidden">
+            <img src="./icons/arrow-v3.png" alt="">
+          </div>
+          <div class="mx-auto">
+            <div class=" bg-white py-9 w-52 rounded-2xl"><img class="h-14 w-14 mx-auto" src="./icons/ready.png" alt=""></div>
+            <p class="pl-10 mt-5 font-bold text-[18px]">3. Ready to go</p>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-3 mt-20 gap-14 pb-24">
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r1.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r2.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r3.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r4.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r5.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r6.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r7.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r8.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r9.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r10.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r11.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r12.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r13.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r14.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r15.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r16.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r17.jpg" alt="">
+          </div>
+          <div class="w-full lg:w-auto">
+            <img class="w-full lg:w-auto" src="./images/r18.jpg" alt="">
+          </div>
+        </div>
       </div>
     </section>
 
@@ -505,12 +603,12 @@
           rustic charm
           and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
 
-        <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 text-[#E9E9E9] mt-12 mx-auto">
-          <p>Home</p>
-          <p>Services</p>
-          <p>Portfolio</p>
-          <p>Blogs</p>
-          <p>Contact Us</p>
+        <div class="grid grid-cols-1 lg:grid-cols-5 w-8/12 text-[#E9E9E9] mt-12 mx-auto lg:space-y-0 space-y-5">
+          <p class="lg:mx-0 mx-auto">Home</p>
+          <p class="lg:mx-0 mx-auto">Services</p>
+          <p class="lg:mx-0 mx-auto">Portfolio</p>
+          <p class="lg:mx-0 mx-auto">Blogs</p>
+          <p class="lg:mx-0 mx-auto">Contact Us</p>
         </div>
         <div class="pb-24">
           <button
